include all .env in gitignore except for example

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Remember to add the .env file as an entry in your .gitignore if it isn't already unless you want it included in your version control.
+.env*
+
+# except for the example
+!.env.example
